--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-python-telegram-bot>=21.0
-pymongo>=4.6.0
+python-telegram-bot==21.5
+pymongo==4.8.0
 dnspython>=2.4.2
+python-dotenv==1.0.1
+httpx>=0.27.0
+openai>=1.50.0
 certifi>=2023.7.22
 Flask>=3.0.0
 psutil>=5.9.5
 GitPython>=3.1.40
-httpx>=0.27.0
 gTTS>=2.4.0
 edge-tts>=6.1.9
 langdetect>=1.0.9
